--- a/rock-paper-scissor/index.html
+++ b/rock-paper-scissor/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock-Paper-Scissor</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 
+    <h1 class="test">Test</h1>
     <script src="index.js"></script>
     
 </body>
